# chejsspp

./: .gitignore  .stubfile  CMakeLists.txt  README-cmake-emscripten.txt  README.md  cmake.txt
app/src/: CMakeLists.txt
app/src/Classes/: Texture.cpp
app/src/Classes/Pieces/: Pawn.cpp  Queen.cpp
app/src/Headers/: Texture.hpp
app/src/Headers/Pieces/: Bishop.hpp  Pawn.hpp  Rook.hpp
bin.release/: chessgame.html
build.emscripten.release/: CMakeCache.txt  Makefile  cmake_install.cmake
build.emscripten.release/src/: Makefile  chessgame.data  chessgame_white.html  cmake_install.cmake
include/app/controllers/: AbstractController.hpp  BoardsController.hpp  MainController.hpp
include/app/entities/: AbstractBoardEntity.hpp  BishopsBoard.hpp  KingBoard.hpp  KnightsBoard.hpp  MainBoard.hpp  PawnsBoard.hpp  QueenBoard.hpp  RooksBoard.hpp
include/app/helpers/: GameManager.hpp  HelperFunctions.hpp  Texture.hpp  _ExceptionHandler.hpp  javascript_api.hpp
include/app/views/: BishopView.hpp  BoardView.hpp  KingView.hpp  KnightView.hpp  PawnView.hpp  PieceView.hpp  QueenView.hpp  RookView.hpp  SquareView.hpp  View.hpp
src/: CMakeLists.txt  main.cpp
src/Classes/: Board.cpp  Piece.cpp  Square.cpp
src/Headers/: Board.hpp  General.hpp  Piece.hpp  Square.hpp
src/Headers/Pieces/: Knight.hpp
src/app/controllers/: AbstractClass.cpp  AbstractController.cpp  BoardsController.cpp  MainController.cpp
src/app/entities/: AbstractBoardEntity.cpp  MainBoard.cpp
src/app/helpers/: GameManager.cpp  HelperFunctions.cpp  Texture.cpp  chessgame_javascript_extension.js
src/app/views/: BoardView.cpp  PiecesPaths.cpp  View.cpp
temp/Classes/: Board.cpp  Piece.cpp  Position.cpp  Square.cpp
temp/Classes/Pieces/: Bishop.cpp  King.cpp  Knight.cpp  Rook.cpp
temp/Headers/: Board.hpp  General.hpp  Piece.hpp  Position.hpp  Square.hpp
temp/Headers/Pieces/: King.hpp  Queen.hpp
